--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hpmepage": "https://github.com/Victtoriacorreia01/Portifolio-Atualizado",
+  "homepage": "https://github.com/Victtoriacorreia01/Portifolio-Atualizado",
   "name": "portvic",
   "private": true,
   "version": "0.0.0",
