--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://victtoriacorreia01.github.io/Portifolio-Atualizado/",
-  "name": "Portifolio-Atualizado",
+  "homepage": "https://github.com/Victtoriacorreia01/Portifolio-Atualizado/",
+  "name": "portvic",
   "private": false,
   "version": "0.0.0",
   "type": "module",
